# LightZone-backup

./: .appveyor.yml  .gitignore  TRANSLATION.md  build.gradle.kts  settings.gradle.kts
debian/: control  copyright  lightzone.dsc
lightcrafts/: build.gradle.kts  build.xml  ivy.xml  ivysettings.xml
lightcrafts/app/advice/: Locale_ja.properties
lightcrafts/app/menu/: MenuFactory_ja.properties
lightcrafts/coprocesses/: CMakeLists.txt
lightcrafts/coprocesses/dcraw/: CMakeLists.txt
lightcrafts/coprocesses/forkdaemon/: CMakeLists.txt
lightcrafts/help/: help2pdf.sh  html2unified.sed  index_translations.txt  markdown2html.sh  markdown2pdf.sh
lightcrafts/help/Danish/: Legal.html
lightcrafts/help/Dutch/: Legal.html
lightcrafts/help/English/: Acknowledgments.markdown  Anatomy-Browser.markdown  Anatomy-Editor.markdown  Black_Point_Compensation.markdown  Blend_Modes.markdown  Buttons-Photo.markdown  Color_Luminosity_Selection.html  Color_Luminosity_Selection.markdown  Color_Selection_Viewer.html  Color_Selection_Viewer.markdown  Converting-Batch.html  Converting-Batch.markdown  Converting.html  Converting.markdown  Default_Tone_Curve.html  Default_Tone_Curve.markdown  Discover.html  Discover.markdown  (+149 more)
lightcrafts/jnisrc/: GNUmakefile  jni.mk
lightcrafts/mk/: platform.mk
lightcrafts/prefs/: Locale_ja.properties
lightcrafts/products/: GNUmakefile
linux/: build.gradle.kts  build.xml  lightzone.spec
linux/help/: build.xml  tidyall.sh
macosx/: build.xml  oracle.xml
macosx/help/: lang.mk
windows/: BUILD-Windows-msys2.md  build.gradle.kts  build.xml
(+297 files in other folders)
